Email: Fix CSS spacing for details vs. summary in admin emails.

--- a/web/themes/custom/breema2/css/email-send.css
+++ b/web/themes/custom/breema2/css/email-send.css
@@ -12,7 +12,9 @@
 
 details {
   margin: 0 0 2em 0;
-  padding: 0.5em 0;
+}
+details summary {
+  margin: 0 0 1em 0;
 }
 
 img {
