--- a/web/themes/custom/breema2/sass/global/_email-send.scss
+++ b/web/themes/custom/breema2/sass/global/_email-send.scss
@@ -12,5 +12,7 @@
 
 details {
   margin: 0 0 2em 0;
-  padding: 0.5em 0;
+  summary {
+    margin: 0 0 1em 0;
+  }
 }
